[package]
name = "leptos-material"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/leptos-material"
documentation = "https://docs.rs/leptos-material"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
leptos = { version = "0.1.1", default-features = false }
material-color-utilities-rs = "0.2.0"
palette = "0.6.1"
rsass-macros = "0.27.0"
rgb = { version = "0.8.34", features = ["argb"] }
bytemuck = "1.13.0"
