[package]
name = "leptos-material"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/leptos-material"
documentation = "https://docs.rs/leptos-material"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
const-str = "0.5.4"
derive_more = "0.99.17"
getrandom = { version = "0.2.9", features = ["js"] }
grass = { version = "0.12.3", default-features = false, features = ["macro", "nightly"] }
leptos = { version = "0.2.5", default-features = false }
material-color-utilities-rs = "0.2.1"
palette = "0.7.1"
rgb = { version = "0.8.36", features = ["argb"] }
